# mcp-doctor

./: Dockerfile  README.md  pyproject.toml
.github/: FUNDING.yml
docs/: index.html  privacy.html  terms.html
mcp_doctor/: __init__.py  checks.py  cli.py  client.py
tests/: bad_server.py  test_checks.py
