[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-doctor"
version = "0.1.0"
description = "Health-check, lint, and security-audit any MCP (Model Context Protocol) server from the command line."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mohamed Ashrey" }]
keywords = ["mcp", "model-context-protocol", "ai-agents", "linter", "security", "testing", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/M-Ashrey/mcp-doctor"
Repository = "https://github.com/M-Ashrey/mcp-doctor"

[project.scripts]
mcp-doctor = "mcp_doctor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_doctor"]
